--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "chart.js": "^4.4.1",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
     "react-scripts": "5.0.1",
